@@ -134,7 +134,7 @@ include_HEADERS = \
 #         Interactive front-end and back-ends           #
 #########################################################
 
-bin_PROGRAMS = TDBSCAN_FE.bin TDBSCAN_BE.bin
+bin_PROGRAMS = TDBSCAN_FE.bin TDBSCAN_BE.bin TDBSCAN_FE_nobe.bin TDBSCAN_BE_nobe.bin
 
 TDBSCAN_FE_bin_SOURCES  = \
   TDBSCAN_FE.cpp \
@@ -148,4 +148,17 @@ TDBSCAN_BE_bin_SOURCES  = \
 TDBSCAN_BE_bin_CPPFLAGS = @MRNETAPP_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS)
 TDBSCAN_BE_bin_LDFLAGS  = @MRNETAPP_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
 TDBSCAN_BE_bin_LDADD    = libTDBSCAN-be-offline.la @MRNETAPP_BE_LIBS@ @CLUSTERING_LIBS@
+
+TDBSCAN_FE_nobe_bin_SOURCES  = \
+  TDBSCAN_FE.cpp \
+  TDBSCAN_FE.h
+TDBSCAN_FE_nobe_bin_CPPFLAGS = @MRNETAPP_FE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS) -DBACKEND_ATTACH
+TDBSCAN_FE_nobe_bin_LDFLAGS  = @MRNETAPP_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@
+TDBSCAN_FE_nobe_bin_LDADD    = libTDBSCAN-fe.la @MRNETAPP_FE_LIBS@ @CLUSTERING_LIBS@
+
+TDBSCAN_BE_nobe_bin_SOURCES  = \
+  TDBSCAN_BE.cpp
+TDBSCAN_BE_nobe_bin_CPPFLAGS = @MRNETAPP_BE_CPPFLAGS@ $(CLUSTERING_FULL_CPPFLAGS) -DBACKEND_ATTACH -I/apps/OPENMPI/1.8.1-mellanox/include
+TDBSCAN_BE_nobe_bin_LDFLAGS  = @MRNETAPP_LIBTOOL_RPATH@ @CLUSTERING_LDFLAGS@ -L/apps/OPENMPI/1.8.1-mellanox/lib -lmpi_cxx
+TDBSCAN_BE_nobe_bin_LDADD    = libTDBSCAN-be-offline.la @MRNETAPP_BE_LIBS@ @CLUSTERING_LIBS@
 
