@@ -1,0 +1,7 @@
+#!/bin/bash
+
+ulimit -c unlimited
+
+source @sub_PREFIX@/etc/TDBSCAN_env.sh
+
+$0.bin $@
