@@ -1,0 +1,5 @@
+#!/bin/bash
+
+source @sub_PREFIX@/etc/TDBSCAN_env.sh
+
+$0.bin $@
